[package]
name = "kitti-viewer"
version = "0.1.2"
authors = ["Thomaub <github.thomaub@gmail.com>"]
description = "Cross-platform 3D viewer to display kitti datasets poincloud and annotations"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["cli", "gui", "cross-platform"]
categories = [" Command-line interface ", "Computer vision", "GUI", "Visualization"]
repository = "https://github.com/ThomAub/kitti-viewer"
homepage = "https://github.com/ThomAub/kitti-viewer"
exclude = [".gitignore", "/tests/**"]

[dependencies]
anyhow = "1.0.31"
kiss3d = {version="0.25.0"}
nalgebra = "0.21"
clap = {version = "3.0.0-beta.1", features = ["suggestions", "color"]}


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/cli.rs"
name = "kitti-viewer"
