[package]
name = "viewercloud"
version = "0.2.1"
authors = ["Thomaub <github.thomaub@gmail.com>"]
description = "Cross-platform 3D viewer to display autonomous driving poincloud datasets and annotations"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["cli", "gui", "cross-platform", "python", "wasm"]
categories = [" Command-line interface ", "Computer vision", "GUI", "Visualization"]
repository = "https://github.com/ThomAub/viewercloud"
homepage = "https://github.com/ThomAub/viewercloud"
exclude = [".gitignore", "tests/**", "target/**"]

[dependencies]
anyhow = { version = "1.0.31" }
kiss3d = { version = "0.27.0" }
nalgebra = { version = "0.23" }
clap = { features = ["suggestions", "color"], version = "4.0.13" }


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/cli.rs"
name = "viewercloud"
